[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pokemongo-notifier"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/pokemon_notifier"]
